Added popularity statistics for each configuration, implemented a generalised interface for the evaluation of statistics to avoid copy-pasta

--- a/DotA2Analysis/DotA2Analysis.csproj
+++ b/DotA2Analysis/DotA2Analysis.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Analysis.cs" />
     <Compile Include="AttributeConfiguration.cs" />
+    <Compile Include="ConfigurationEvaluation.cs" />
     <Compile Include="Hero.cs" />
     <Compile Include="Heroes.cs" />
     <Compile Include="Program.cs" />
