--- a/DotA2Analysis/DotA2Analysis.csproj
+++ b/DotA2Analysis/DotA2Analysis.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Heroes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RangeConfiguration.cs" />
     <Compile Include="RoleConfiguration.cs" />
     <Compile Include="SetupStatistics.cs" />
   </ItemGroup>
